tests/baselines/reference/unusedImports13.errors.txt
tests/cases/compiler/foo.tsx(2,8): error TS6133: 'React' is declared but never used.


==== tests/cases/compiler/foo.tsx (1 errors) ====
    
    import React = require("react");
           ~~~~~
!!! error TS6133: 'React' is declared but never used.
    
    export const FooComponent = <div></div>
    
==== tests/cases/compiler/node_modules/@types/react/index.d.ts (0 errors) ====
    export = React;
    export as namespace React;
    
    declare namespace React {
        function createClass<P, S>(spec);
    }
    declare global {
        namespace JSX {
        }
    }
    
    
    